[package]
name = "qbittorrent-gluetun-pia-portforward"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.5", features = ["cookies", "json"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1", features = ["full"] }
url = "2.5.2"
